<resources>
    <string name="app_name">TODO_APP</string>
    <string name="new_task">New Task</string>
    <string name="save">Save</string>
    <string name="todo">TODO</string>
    <string name="welcome">Hello Welcome</string>
    <string name="login">Sign In to continue</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="et_user_name">User Name</string>
    <string name="et_password">Password</string>
    <string name="login_btn">Login</string>
    <string name="cancel_btn">Cancel</string>
    <string name="tasks">Tasks</string>
</resources>